Release 0.0.39